src/objects/ADvendio__Site__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AccountPayable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Payable</label>
        <referenceTo>ADvendio__AccountPayable__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In the AdSpecs &amp; Rates Manager, Inventory &amp; Rates Manager and Booking Calendar, only active marked records will be available.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Group Sites for reporting and interfaces to Finance/ Accounting Systems</description>
        <inlineHelpText>Group Sites for reporting and interfaces to Finance/ Accounting Systems</inlineHelpText>
        <label>Brand</label>
        <referenceTo>ADvendio__Brand__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Circulation__c</fullName>
        <description>Please enter the circulation for the advertising medium here.</description>
        <inlineHelpText>Please enter the circulation for the advertising medium here.</inlineHelpText>
        <label>Circulation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the contact who is responsible for this site.</description>
        <inlineHelpText>Enter the contact who is responsible for this site.</inlineHelpText>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__External_Name__c</fullName>
        <description>Enter a name for this site for external use. This value is shown on the proposal.</description>
        <inlineHelpText>Enter a name for this site for external use. This value is shown on the proposal.</inlineHelpText>
        <label>External Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Mandator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter an account to whom this site shall be assigned.</description>
        <inlineHelpText>Enter an account to whom this site shall be assigned.</inlineHelpText>
        <label>Mandator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__MediaType__c</fullName>
        <description>Selected Media type controls e.g. functions and assignment information in Media Search, AdMaterial Management and in Commitments.</description>
        <inlineHelpText>Please chose the relevant Media Type for this Advertising Medium.</inlineHelpText>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADvendio__MediaType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Media__c</fullName>
        <description>This field is no longer used by ADvendio.</description>
        <inlineHelpText>Select the media for this site.</inlineHelpText>
        <label>Media (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Out of Home</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__PrincipalShare__c</fullName>
        <description>This field is used to define a share granted to site&apos;s principal.</description>
        <inlineHelpText>This field is used to define a share granted to site&apos;s principal.</inlineHelpText>
        <label>Principal Share</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__Product_search_Name__c</fullName>
        <description>Enter how this site is to be displayed in the product search.</description>
        <inlineHelpText>Enter how this site is to be displayed in the product search.</inlineHelpText>
        <label>Product search Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Title_KeyID__c</fullName>
        <displayFormat>{000}</displayFormat>
        <label>Title_KeyID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ADvendio__Title_Shortform__c</fullName>
        <description>Enter a short form for this site. This field is for internal use only.</description>
        <inlineHelpText>Enter a short form for this site. This field is for internal use only.</inlineHelpText>
        <label>Title Shortform</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>Enter a UniqueKey (recommended: syntax) for this site.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a UniqueKey (recommended: syntax) for this site.</inlineHelpText>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mig_Info__c</fullName>
        <description>INSERT: von ProDia importiert
UPDATE: von ProDia Änderungen übernommen
DELETE: nicht in ProDia vorhanden, kann evtl. gelöscht werden</description>
        <inlineHelpText>INSERT: von ProDia importiert
UPDATE: von ProDia Änderungen übernommen
DELETE: nicht in ProDia vorhanden, kann evtl. gelöscht werden</inlineHelpText>
        <label>Migration Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mig_IsBrand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mig_IsBrand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mig_IsSpecialInterest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mig_IsSpecialInterest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mig_ProdiaKey__c</fullName>
        <description>Eindeutiger Schlüssel aus ProDia, der für Abgleich bei Migrataion benötigt wird</description>
        <inlineHelpText>Eindeutiger Schlüssel aus ProDia, der für Abgleich bei Migrataion benötigt wird</inlineHelpText>
        <label>Mig_ProdiaKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDig_DEWerbetraegertyp__c</fullName>
        <description>Kennzeichnung als Grundlage für einige Berichte - Zuordnung einer Seite zu einer Gruppe von Werbeträgern.</description>
        <formula>TEXT(SomDig_Werbetraergergruppierung__r.SomDig_DEWerbetraegertyp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Kennzeichnung als Grundlage für einige Berichte - Zuordnung einer Seite zu einer Gruppe von Werbeträgern.</inlineHelpText>
        <label>Werbeträgertyp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_InternerMandant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kennzeichnung ob es um einen internen oder externen Mandaten mit seinen Werbeträgern handelt.</description>
        <inlineHelpText>Bitte kennzeichnen falls es um einen internen Mandaten mit seinen Werbeträgern handelt.</inlineHelpText>
        <label>Interner Mandant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Mediagattung__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Die erste Klassifizierung/Zuordnung des Werbeträgers zu einer Mediagattung (TV/Digital/Text)</description>
        <inlineHelpText>Klassifizierung/Zuordnung des Werbeträgers zu einer Mediagattung (TV/Digital/Text)</inlineHelpText>
        <label>Mediagattung</label>
        <referenceTo>SomDig_Mediagattung__c</referenceTo>
        <relationshipLabel>Werbeträger</relationshipLabel>
        <relationshipName>Werbetraeger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Werbetraergergruppierung__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Werbeträgergruppierung sind vormals als Marke bekannt und fassen mehrere Werbeträger zusammen, Grundlage für die Zuordnung von IA Nummern und Werbeträgern.
Möglichkeit Werbeträger zu gruppieren um Marken abzubilden. 
Beispiel Werbeträger Sixx besteht aus vielen kleinen Seiten bzw. Werbeträgern, diese werden unter der Marke Sixx zusammengefasst.</description>
        <inlineHelpText>Werbeträgergruppierung sind vormals als Marke bekannt und fassen mehrere Werbeträger zusammen,Grundlage für die Zuordnung von IA Nummern &amp; Werbeträgern.
Möglichkeit Werbeträger zu gruppieren um Marken abzubilden.</inlineHelpText>
        <label>Werbeträgergruppierung</label>
        <referenceTo>SomDig_Werbetraegergruppierung__c</referenceTo>
        <relationshipLabel>Werbeträger</relationshipLabel>
        <relationshipName>Werbetraeger</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Site</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Werbetraergergruppierung__c</columns>
        <columns>Mig_ProdiaKey__c</columns>
        <columns>ADvendio__Title_KeyID__c</columns>
        <columns>ADvendio__Contact_Person__c</columns>
        <columns>ADvendio__Mandator__c</columns>
        <columns>ADvendio__Title_Shortform__c</columns>
        <columns>ADvendio__External_Name__c</columns>
        <columns>ADvendio__Product_search_Name__c</columns>
        <columns>SomDig_Mediagattung__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>SomDig_DEWerbetraegertyp__c</columns>
        <columns>SomDig_InternerMandant__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SomDig_NameDoubleBlank</fullName>
        <active>true</active>
        <description>KV 03291. Keine doppelten Leerzeichen in den Feldern Name, Kurzform, externe Bezeichnung und Produktsuche.</description>
        <errorConditionFormula>CONTAINS(Name, &apos;  &apos;) || CONTAINS(ADvendio__Title_Shortform__c, &apos;  &apos;) || CONTAINS(ADvendio__External_Name__c, &apos;  &apos;) || CONTAINS(ADvendio__Product_search_Name__c, &apos;  &apos;)</errorConditionFormula>
        <errorMessage>Keine doppelten Leerzeichen in den Feldern Name, Kurzform, externe Bezeichnung und Produktsuche.</errorMessage>
    </validationRules>
</CustomObject>